# UBC-OCEAN

./: .gitignore  0-poc-bi-sngan-64x64.ipynb  0.poc-bi-sngan-64x64.ipynb  README.md  pyproject.toml  train_bisngan_svhn.py  train_cifar10.py
notebooks/: train_cifar10.ipynb
src/: auto_encoder.py  barlow_twins.py  bigan.py  biggan.py  chowder.py  cnn.py  compressor.py  datasets.py  pool_conv.py  sngan.py  utils.py  vae.py  vaegan.py
src/models/: BiSNGAN.py  bi_sngan.py  bigan.py
src/utils/: loss.py
