[tool.poetry]
name = "ubc-ocean"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.1.0"
numpy = "^1.26.1"
tqdm = "^4.66.1"
torchvision = "^0.16.0"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
pywuffs = "^1.1.1"
pyvips = "^2.2.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.6"
types-tqdm = "^4.66.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
